[project]
name = "bluesky-gym"
dynamic = ["version"]
dependencies = [
    "torch",
    "pygame",
    "gymnasium[other]",
    "stable-baselines3",
    "numpy",
    "bluesky-simulator>=1.0.7",
    "rasterio>=1.5.0",
    "pyproj>=3.7.2",
    "tensorboard>=2.20.0",
    "shapely>=2.1.2",
]

authors = [
  { name="Jan Groot", email="d.j.groot@tudelft.nl" },
  { name="Joost Ellerbroek", email="j.ellerbroek@tudelft.nl" },
  { name="Giulia Leto", email="g.leto@tudelft.nl" },
  { name="Sasha Vlaskin", email="a.vlaskin@tudelft.nl" },
]
description = "A gymnasium style environment for standardized Reinforcement Learning research in Air Traffic Management."
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Development Status :: 4 - Beta",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.urls]
Homepage = "https://github.com/TUDelft-CNS-ATM/bluesky-gym"
Issues = "https://github.com/TUDelft-CNS-ATM/bluesky-gym/issues"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
  "bluesky_gym/*",
]
